-Added 1 new estate privilege: 1 for Muslum Andalusian nations (Hire Jewish Viziers/Dhimmis)
-Buffed invading nations
-Minor history changes especially during the Danish Interregnum and around Weimar
-Fixed CTD caused by missing Epic Games store button
-Some more missions now utilise monuments if you own Leviathan
-Canals will no longer randomly spawn before when they are supposed to be built
-The Prussian Confederacy will start with more provinces
-Revolutionary and reactionary rebellions will be larger when a revolution starts
-Estates will no longer demand the construction of a manufactory before tech 32
-The Golden Horde and Ilkhanate will now start as historical friends, however, they will become historical rivals later on
-Tribal land should no longer become uncolonized randomly
-Natives can now conquer land and vassalize in peace deals
-Natives will get a +200 % tech cost penalty
-Natives can now reform into monarchies properly
-Natives will now lose enough reform progress upon reforming preventing them to select further reforms Immediately afterwards
-Federations will no longer be able to centralize
-Improved the code of the decision for Byzantium to reform their government (thanks to HawkV)
-Reworked Byzantine 'Repair the Defenses' decision to only require sufficient number of forts in Anatolian border regions
-Optimised 'Centralize the Realm' decision to hopefully cause way less lag than it used to
-Fixed some overlapping interface
-Instances of Reform Progress growth modifier will now work correctly again
-Removed war canoes from the mod
-Fixed the Castilian Civil War from not ending
-The AI will less often form Lombardy
-Added an event to end wars when a crusading nation is attacked by Catholics
-More countries will now participate in Great Crusades
-Changing state religions will no longer refresh missions
-Forming England as Normandy should no longer cause issues with national ideas or terra incognita
-Other minor localization/bug fixes

# v 2.2.4 #
