@@ -125,6 +125,9 @@ NDefines.NReligion.YEARLY_DOOM_INCREASE = 0.5
 NDefines.NReligion.MAX_CHRISTIAN_RELIGIOUS_CENTERS = 8
 NDefines.NReligion.REFORM_DESIRE_PER_YEAR = 0.000
 NDefines.NReligion.PAPAL_TITHE_PERCENTAGE = 0.03
+NDefines.NReligion.MIN_CARDINALS = 14
+NDefines.NReligion.MAX_CARDINALS = 98
+NDefines.NReligion.MAX_CARDINALS_PER_COUNTRY = 10
 
 NDefines.NNationDesigner.POINTS_AVAILABLE = 500
 NDefines.NNationDesigner.MEMBER_OF_HRE_COST = 5
