@@ -6455,6 +6455,7 @@ estate_church_monopoly_of_incense = {
 				trade_goods = incense
 				trade_goods = mercury
 				trade_goods = oil
+				trade_goods = tobacco
 			}
 		}
 	}
@@ -6486,6 +6487,7 @@ estate_church_monopoly_of_incense = {
 					trade_goods = incense
 					trade_goods = mercury
 					trade_goods = oil
+					trade_goods = tobacco
 				}
 			}
 			custom_tooltip = MONOPOLY_INCOME_INCENSE_DESC
@@ -6498,6 +6500,7 @@ estate_church_monopoly_of_incense = {
 						trade_goods = incense
 						trade_goods = mercury
 						trade_goods = oil
+						trade_goods = tobacco
 					}
 				}
 				add_province_modifier = {
