@@ -4,12 +4,12 @@
  RELIGIOUS_CONFLICT_RULES_OFF: "This age has no special religious conflict. Reformation Centers are gone, there are no crusades being called, Holy Orders are absent, the Pope can not excommunicate"
  estate_burghers_khmer_irrigation_effect_tooltip: "Every owned province in the §YMesopotamia§! superregion producing §YGrain§!, §YDates§!, §YBarley§!, §YRye§!, §YVegetables§! or §YRice§! gains:\nLocal Development Cost: §G-10%§!"
 #Privileges
- MONOPOLY_INCOME_INCENSE_DESC: "from incense, quicksilver or oil production."
+ MONOPOLY_INCOME_INCENSE_DESC: "from incense, quicksilver, oil or inhalants production."
  MONOPOLY_INCOME_LIVESTOCK_DESC: "from cattle or pig production."
  MONOPOLY_INCOME_WOOL_DESC: "from wool or leather production."
  monopoly_privileges.8.t: "Extension of the Monopoly on Ceremonial Goods"
- monopoly_privileges.8.d.church: "The monopoly on ceremonial goods we granted to the [Root.GetClergyName] has expired, meaning that we are now able to reclaim the income from incense, quicksilver and oil production. However, the [Root.GetClergyName] are keen to keep their privileges and are offering to pay us a lump sum in return for the monopoly being guaranteed for a further 10 years."
- monopoly_privileges.8.d.brahmins: "The monopoly on incense we granted to the [Root.GetBrahminsName] has expired, meaning that we are now able to reclaim the income from incense, quicksilver and oil production. However, the [Root.GetBrahminsName] are keen to keep their privileges and are offering to pay us a lump sum in return for the monopoly being guaranteed for a further 10 years."
+ monopoly_privileges.8.d.church: "The monopoly on ceremonial goods we granted to the [Root.GetClergyName] has expired, meaning that we are now able to reclaim the income from incense, quicksilver, oil and inhalants production. However, the [Root.GetClergyName] are keen to keep their privileges and are offering to pay us a lump sum in return for the monopoly being guaranteed for a further 10 years."
+ monopoly_privileges.8.d.brahmins: "The monopoly on incense we granted to the [Root.GetBrahminsName] has expired, meaning that we are now able to reclaim the income from incense, quicksilver, oil and inhalants production. However, the [Root.GetBrahminsName] are keen to keep their privileges and are offering to pay us a lump sum in return for the monopoly being guaranteed for a further 10 years."
  monopoly_privileges.8.b.tooltip: "We will be able to revoke the §YMonopoly on Ceremonial Goods§! estate privilege."
  monopoly_privileges.9.t: "Extension of the Monopoly on Clothing"
  monopoly_privileges.9.d.church: "The monopoly on clothing we granted to the [Root.GetClergyName] has expired, meaning that we are now able to reclaim the income from wool and leather production. However, the [Root.GetClergyName] are keen to keep their privileges and are offering to pay us a lump sum in return for the monopoly being guaranteed for a further 10 years."
@@ -46,10 +46,10 @@
  estate_church_monopoly_of_wool_revoke_tooltip: "Production income from §YWool§! and §YLeather§! is restored"
  estate_church_monopoly_of_incense: "Monopoly on Ceremonial Goods"
  estate_church_monopoly_of_incense_desc: "The incenses and other ceremonial goods that are so popular for our religious practices are expensive. The [Root.GetClergyName] desire to control their production so that they may be a boon rather than a drain to their resources."
- estate_church_monopoly_of_incense_effect_tooltip: "§RNo income from §YIncense§!, §YQuicksilver§! and §YOil§!§!"
+ estate_church_monopoly_of_incense_effect_tooltip: "§RNo income from §YIncense§!, §YQuicksilver§!, §YOil§! and §YInhalants§!§!"
  estate_church_monopoly_of_incense_mod: "Monopoly on Ceremonial Goods"
  desc_estate_church_monopoly_of_incense_mod: "The state has granted the [Root.Owner.GetClergyName] monopoly rights over ceremonial goods production."
- estate_church_monopoly_of_incense_revoke_tooltip: "Production income from §YIncense§!, §YQuicksilver§! and §YOil§! is restored"
+ estate_church_monopoly_of_incense_revoke_tooltip: "Production income from §YIncense§!, §YQuicksilver§!, §YOil§! and §YInhalants§! is restored"
 #Burghers Estate
  estate_burghers_dutch_water_lines: "Dutch Water Lines"
  estate_burghers_dutch_water_lines_desc: "The Lowlands are situated just a few centimeters above sea level. We can exploit this in times of war to make it difficult for our enemies to pass through our country by inundating some parts of our country."
@@ -487,7 +487,7 @@
  estate_brahmins_monopoly_of_wool_revoke_tooltip: "Production income from §YWool§! and §YLeather§! is restored"
  estate_brahmins_monopoly_of_incense_desc: "The incenses and other ceremonial goods that are so popular for our religious practices are expensive. The [Root.GetBrahminsName] desire to control their production so that they may be a boon rather than a drain to their resources."
  estate_brahmins_monopoly_of_incense: "Monopoly on Ceremonial Goods"
- estate_brahmins_monopoly_of_incense_effect_tooltip: "§RNo income from §YIncense§!, §YQuicksilver§! or §YOil§!§!"
+ estate_brahmins_monopoly_of_incense_effect_tooltip: "§RNo income from §YIncense§!, §YQuicksilver§!, §YOil§!§ and §YInhalants§!§!"
  estate_brahmins_monopoly_of_incense_mod: "Monopoly on Ceremonial Goods"
  desc_estate_brahmins_monopoly_of_incense_mod: "The state has granted the Asronan monopoly rights over ceremonial goods production."
  estate_brahmins_stop_converting_province_x: "Protect the Zoroastrians in [agenda_province.GetName]"
