@@ -4,12 +4,12 @@
  RELIGIOUS_CONFLICT_RULES_OFF: "Dieses Zeitalter hat keine besonderen religiösen Konflikte. Reformationszentren wurden aufgelöst, Kreuzzüge beendet, Ritterorden aufgelöst und der Papst kann nicht mehr exkommunizieren."
  estate_burghers_khmer_irrigation_effect_tooltip: "Jede im Besitz befindliche Provinz in §YMesopotamien§!, die §YGetreide§!, §YDatteln§!, §YGerste§!, §YRoggen§!, §YGemüse§! oder §YReis§! produziert, erhält:\nEntwicklungskosten (Lokal): §G-10 %§!"
 #Privileges
- MONOPOLY_INCOME_INCENSE_DESC: "aus der Weihrauch-, Quecksilber und Ölproduktion."
+ MONOPOLY_INCOME_INCENSE_DESC: "aus der Weihrauch-, Quecksilber-, Öl- und Inhalationsmittelproduktion."
  MONOPOLY_INCOME_LIVESTOCK_DESC: "aus der Vieh- und Schweineproduktion."
  MONOPOLY_INCOME_WOOL_DESC: "aus der Woll- und Lederproduktion."
  monopoly_privileges.8.t: "Erweiterung des Monopols auf Zeremonialwaren"
- monopoly_privileges.8.d.church: "Das Monopol auf Zeremonialwaren, das wir dem [Root.GetKlerusName] gewährt haben, ist abgelaufen, was bedeutet, dass wir jetzt selbst die Einnahmen aus unserer Weihrauch-, Quecksilber und Ölproduktion ernten können. Der [Root.GetKlerusName] sind jedoch auch sehr daran interessiert, ihre Privilegien zu behalten und bieten an, uns eine Pauschale als Gegenleistung für ein Monopol zu zahlen, das weitere 10 Jahre bestand hat."
- monopoly_privileges.8.d.brahmins: "Das Monopol auf Zeremonialwaren, das wir den [Root.GetBrahmanenName] gewährt haben, ist abgelaufen, was bedeutet, dass wir jetzt selbst die Einnahmen aus unserer Weihrauch-, Quecksilber und Ölproduktion ernten können. Die [Root.GetBrahmanenName] sind jedoch auch sehr daran interessiert, ihre Privilegien zu behalten und bieten an, uns eine Pauschale als Gegenleistung für ein Monopol zu zahlen, das weitere 10 Jahre bestand hat."
+ monopoly_privileges.8.d.church: "Das Monopol auf Zeremonialwaren, das wir dem [Root.GetKlerusName] gewährt haben, ist abgelaufen, was bedeutet, dass wir jetzt selbst die Einnahmen aus unserer Weihrauch-, Quecksilber-, Öl- und Inhalationsmittelproduktion ernten können. Der [Root.GetKlerusName] sind jedoch auch sehr daran interessiert, ihre Privilegien zu behalten und bieten an, uns eine Pauschale als Gegenleistung für ein Monopol zu zahlen, das weitere 10 Jahre bestand hat."
+ monopoly_privileges.8.d.brahmins: "Das Monopol auf Zeremonialwaren, das wir den [Root.GetBrahmanenName] gewährt haben, ist abgelaufen, was bedeutet, dass wir jetzt selbst die Einnahmen aus unserer Weihrauch-, Quecksilber-, Öl- und Inhalationsmittelproduktion ernten können. Die [Root.GetBrahmanenName] sind jedoch auch sehr daran interessiert, ihre Privilegien zu behalten und bieten an, uns eine Pauschale als Gegenleistung für ein Monopol zu zahlen, das weitere 10 Jahre bestand hat."
  monopoly_privileges.8.b.tooltip: "Wir sind in der Lage das Standesprivileg §YMonopol auf Zeremonialwaren§! zu widerrufen."
  monopoly_privileges.9.t: "Erweiterung des Monopols auf Kleidung"
  monopoly_privileges.9.d.church: "Das Monopol auf Kleidung, das wir dem [Root.GetKlerusName] gewährt haben, ist abgelaufen, was bedeutet, dass wir jetzt selbst die Einnahmen aus unserer Woll- und Lederproduktion ernten können. Der [Root.GetKlerusName] sind jedoch auch sehr daran interessiert, ihre Privilegien zu behalten und bieten an, uns eine Pauschale als Gegenleistung für ein Monopol zu zahlen, das weitere 10 Jahre bestand hat."
@@ -46,10 +46,10 @@
  estate_church_monopoly_of_wool_revoke_tooltip: "Die Produktionseinnahmen aus §YWolle§! und §YLeder§! werden wiederhergestellt"
  estate_church_monopoly_of_incense: "Monopol auf Zeremonialwaren"
  estate_church_monopoly_of_incense_desc: "Weihrauch und andere Zeremonialwaren, das für unsere religiösen Rituale genutzt wird, ist ebenso beliebt wie teuer. Der [Root.GetKlerusName]-Stand wünscht daher, seine Herstellung zu kontrollieren, damit diese keine Belastung für seine Ressourcen ist."
- estate_church_monopoly_of_incense_effect_tooltip: "§RKeine Einnahmen durch §YWeihrauch§!, §YQuecksilber§! und §YÖl§!§!"
+ estate_church_monopoly_of_incense_effect_tooltip: "§RKeine Einnahmen durch §YWeihrauch§!, §YQuecksilber§!, §YÖl§! und §YInhalationsmittel§!§!"
  estate_church_monopoly_of_incense_mod: "Monopol auf Zeremonialwaren"
  desc_estate_church_monopoly_of_incense_mod: "Der Staat hat dem [Root.Owner.GetKlerusName]-Stand die Monopolrechte über die Zeremonialwarenproduktion gewährt."
- estate_church_monopoly_of_incense_revoke_tooltip: "Die Produktionseinnahmen aus §YWeihrauch§!, §YQuecksilber§! und §YÖl§! werden wiederhergestellt"
+ estate_church_monopoly_of_incense_revoke_tooltip: "Die Produktionseinnahmen aus §YWeihrauch§!, §YQuecksilber§!, §YÖl§! und §YInhalationsmittel§! werden wiederhergestellt"
 #Burghers Estate
  estate_burghers_dutch_water_lines: "Holländische Wasserlinien"
  estate_burghers_dutch_water_lines_desc: "Die Niederlande liegen nur wenige Zentimeter über dem Meeresspiegel. Diese Tatsache können wir in Kriegszeiten dafür ausnutzen, um unseren Feinden das Passieren unseres Landes zu erschweren, indem wir einige Teile unseres Landes überschwemmen."
