@@ -118,7 +118,19 @@ vn_boh_missions_slot_1 = {
             OR ={
                 any_rival_country = {
                     primary_culture = austrian
-                    has_been_insulted_by_root = yes
+					custom_trigger_tooltip = {
+						tooltip = has_been_insulted_by_root
+						OR = {
+							has_opinion_modifier = {
+								who = ROOT
+								modifier = insulted
+							}
+							has_opinion_modifier = {
+								who = ROOT
+								modifier = scornfully_insulted
+							}
+						}
+					}
                     NOT = {
                         army_strength = {
                             who = ROOT
