@@ -198,7 +198,21 @@ VN_BYZ_missions_slot_2_a = {
 			OR = {
 				AND = {
 					is_rival = PAP
-					PAP = { has_been_insulted_by_root = yes }
+					PAP = {
+						custom_trigger_tooltip = {
+							tooltip = has_been_insulted_by_root
+							OR = {
+								has_opinion_modifier = {
+									who = ROOT
+									modifier = insulted
+								}
+								has_opinion_modifier = {
+									who = ROOT
+									modifier = scornfully_insulted
+								}
+							}
+						}
+					}
 				}
 				AND = {
 					army_size = PAP
