@@ -326,7 +326,19 @@ vn_sav_missions_slot_3 = {
         trigger = {
             OR = {
                 FRA = {
-                    has_been_insulted_by_root = yes
+                    custom_trigger_tooltip = {
+						tooltip = has_been_insulted_by_root
+						OR = {
+							has_opinion_modifier = {
+								who = ROOT
+								modifier = insulted
+							}
+							has_opinion_modifier = {
+								who = ROOT
+								modifier = scornfully_insulted
+							}
+						}
+					}
                 }
                 NOT = { exists = FRA }
             }
