@@ -981,7 +981,19 @@ vn_tou_missions_slot_4 = {
 							superregion = iberia_superregion
 						}
 						OR = {
-							has_been_insulted_by_root = yes
+							custom_trigger_tooltip = {
+								tooltip = has_been_insulted_by_root
+								OR = {
+									has_opinion_modifier = {
+										who = ROOT
+										modifier = insulted
+									}
+									has_opinion_modifier = {
+										who = ROOT
+										modifier = scornfully_insulted
+									}
+								}
+							}
 							humiliated_by = ROOT
 						}
 					}
