@@ -34,7 +34,21 @@ vn_hns_khz_missions_slot_1 = {
                 }
                 AND = {
                     is_rival = HUN
-                    HUN = { has_been_insulted_by_root = yes }
+                    HUN = {
+                        custom_trigger_tooltip = {
+                            tooltip = has_been_insulted_by_root
+                            OR = {
+                                has_opinion_modifier = {
+                                    who = ROOT
+                                    modifier = insulted
+                                }
+                                has_opinion_modifier = {
+                                    who = ROOT
+                                    modifier = scornfully_insulted
+                                }
+                            }
+                        }
+                    }
                 }
             }
         }
