@@ -13,6 +13,7 @@
 -Fixed CTD caused by missing Epic Games store button
 -Some more missions now utilise monuments if you own Leviathan
 -Canals will no longer randomly spawn before when they are supposed to be built
+-Doubled the total number of cardinals and increased the number of cardinals per country and on gamestart
 -The Prussian Confederacy will start with more provinces
 -Revolutionary and reactionary rebellions will be larger when a revolution starts
 -Estates will no longer demand the construction of a manufactory before tech 32
